chore: improve zookeeper jvm settings